--- a/circle-ci-asp-net-razor-pages.csproj
+++ b/circle-ci-asp-net-razor-pages.csproj
@@ -4,15 +4,13 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <RootNamespace>circle_ci_asp_net_razor_pages</RootNamespace>
   </PropertyGroup>
-
-
-  <ItemGroup>
-  </ItemGroup>
-
-
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0-preview3.19554.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.0-preview3.19554.8">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0-preview3.19554.8">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
