--- a/circle-ci-asp-net-razor-pages.csproj
+++ b/circle-ci-asp-net-razor-pages.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>circle_ci_asp_net_razor_pages</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2">
