--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,13 +9,19 @@ commands:
       - run: "dotnet restore"
       - run: "mkdir out"
       - run: "dotnet publish -c Release -o out"
+  testapplication:
+    description: "Run application tests"
+    steps:
+      - run: "dotnet test"
 jobs:
+  runtests: description
   build:
     description: Build application with Release configuration
     executor:
       name: windows/default
     steps:
       - checkout
+      - testapplication
       - restoreandpublish
       - store_artifacts:
           path: C:\Users\circleci\project\out
